[package]
name = "spearmint"
version = "0.1.0"
edition = "2021"
description = "CLI tool to sync developer products and gamepasses to Roblox"
license = "MIT"
repository = "https://github.com/samcparker/spearmint"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dotenvy = "0.15"
sha2 = "0.10"
hex = "0.4"

[profile.release]
lto = true
strip = true
opt-level = "z"
